--- a/index.htm
+++ b/index.htm
@@ -1,5 +1,5 @@
 <html>
-<body background="bgimage.jpg">
+<body background="Screenshot (6).png">
 <h1>NOKIA</h1>
 <p><b>SAI PRASHANTH </b></p>
 </body>
